add description for card and order
